tests/semantic/pass/var-var.tiger
let
	var a := 1
	var a := a
in
end
