tests/semantic/fail/divZeroDyn.tiger
let 
	var n := 5
	var m := 2
	var test := 42
in
	n := -3-m+n;
	test := test/n
end
